k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
spec:
  selector:
    app: flaskapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
