k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp
spec:
  rules:
  - host: "flaskapp.test.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flaskapp
            port:
              number: 8080
